fix theme flicker

--- a/src/app/components/bottom-bar/bottom-bar.module.scss
+++ b/src/app/components/bottom-bar/bottom-bar.module.scss
@@ -30,8 +30,8 @@
         .box.version {
             background-color: var(--color-brand);
             color: #fff;
-            border-top-left-radius: 0.3em;
-            border-top-right-radius: 0.3em;
+            // border-top-left-radius: 0.3em;
+            // border-top-right-radius: 0.3em;
         }
     }
 }
