--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -7,7 +7,6 @@
     margin-right: 2rem;
     margin-left: 3rem;
     background-color: var(--color-leader);
-    border-radius: 0.4rem;
     min-height: calc(100vh - 1rem);
 
     @media (max-width: 720px) {
